--- a/config.cfg.example
+++ b/config.cfg.example
@@ -6,17 +6,17 @@
 linuxuser="nanohome"
 linuxpass="password"
 rootpath="/opt/nanohome"
-backupdir="/home/nanohome/backup"
-weather_location=""
 
 # InfluxDB settings
-influxdb_server="localhost"
-influxdb_database="nanohome"
+influxdb_url="http://localhost:8086"
+influxdb_bucket="nanohome"
+influxdb_org="nanohome"
 influxdb_admin="nanohome"
 influxdb_adminpass="password"
-influxdb_system_user="influx_system"
-influxdb_system_pass="password"
-
+influxdb_token="EJIOHNSXDTZBDWIU23"
+influxdb_config="nanohome"
+influxdb_pkg="https://dl.influxdata.com/influxdb/releases/influxdb2-2.7.1-amd64.deb"
+influxdb_cli="https://dl.influxdata.com/influxdb/releases/influxdb2-client-2.7.3-linux-amd64.tar.gz"
 
 # MQTT settings
 mqtt_server="localhost"
@@ -24,23 +24,13 @@ mqtt_system_user="mqtt_system"
 mqtt_system_pass="password"
 mqtt_grafana_user="mqtt_grafana"
 mqtt_grafana_pass="password"
-
-
-# sensors - change parameters in sensor files first
-cputemp=false
-diskspace=false
+mqtt_shelly_user="mqtt_shelly"
+mqtt_shelly_pass="password"
+mqtt_dash_user="mqtt_dash"
+mqtt_dash_pass="password"
 
 # Grafana Settings
 grafana_url="localhost:3000"
 home_uid="XieEaLmRk"
-devmgr_uid="Uhzl9yRgk"
-zsp_uid="_H3fwdmRz"
+zsp_uid="MCbNuLdVk"
 settings_uid="sYOGRUiRz"
-
-# Device user
-mqtt_shelly_user="mqtt_shelly"
-mqtt_shelly_pass="password"
-
-# MQTT Dash user
-mqtt_dash_user="mqtt_dash"
-mqtt_dash_pass="password"
