--- a/service/multiswitch.service
+++ b/service/multiswitch.service
@@ -1,10 +1,12 @@
 [Unit]
 Wants=mosquitto.service
-Description=-desc1 -> -desc2
+Description=Multiswitch Service - -desc1 -> -desc2
 
 [Service]
-Type=idle
-ExecStart=/bin/bash multiswitchsvc -dev1 -dev2 -value1 -value2
+Type=simple
+user=SVCUSER
+group=SVCUSER
+ExecStart=/bin/bash INSTALLDIR/driver/multiswitch -dev1 -desc1 -dev2 -desc2 -value1 -value2
 Restart=always
 
 [Install]
