--- a/service/shelly_plus.service
+++ b/service/shelly_plus.service
@@ -1,6 +1,7 @@
 [Unit]
 Wants=mosquitto.service influxdb.service
 Description=Shelly Plus Service - -device/-component
+After=mosquitto.service influxdb.service
 
 [Service]
 Type=simple
